clean up some inspections